--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-prophet
-pandas
-numpy
-fastapi
-uvicorn
-pydantic
-httpx
-pytest
+prophet==1.1.5
+pandas==2.2.3
+numpy==1.26.4
+fastapi==0.110.0
+uvicorn==0.41.0
+pydantic==2.12.5
+httpx==0.27.2
+pytest==8.3.4
